# AirTicket

./: .gitignore  README.md
Travel_Recommend_front/: .gitignore  README.md  index.html  package.json  vite.config.js
Travel_Recommend_front/public/: agents.json  cityOptions.json  updateFiles.json
Travel_Recommend_front/src/: App.vue  main.js
Travel_Recommend_front/src/assets/css/: global.css
Travel_Recommend_front/src/components/: Home.vue  SearchAgent.vue  SearchForm.vue  SearchNumber.vue  SearchSeg.vue  Update.vue  addSeg.vue  loading.vue  result.vue
Travel_Recommend_front/src/router/: index.js
Travel_Recommend_system/: AnsElement.cpp  AnsElement.h  CMakeLists.txt  Flight.cpp  Flight.h  FlightAns.cpp  FlightAns.h  FlightRequest.cpp  FlightRequest.h  FlightSet.cpp  FlightSet.h  FligntRequest.cpp  FligntRequest.h  FluctuationTable.cpp  FluctuationTable.h  Net.cpp  Net.h  Price.cpp  Price.h  PriceRule.cpp  PriceRule.h  PriceRuleTable.cpp  PriceRuleTable.h  PriceTable.cpp  PriceTable.h  Recommend_sys.cpp  Recommend_sys.h  RemainSeatTable.cpp  RemainSeatTable.h  RemainingSeat.cpp  RemainingSeat.h  SameDayFlight.cpp  SameDayFlight.h  ThreadPool.h  Time.cpp  Time.h  data.txt  flight.txt  flight2.txt  flightSetting.txt  (+4 more)
docs/: 决赛答辩.pptx
